syntax = "proto3";

package auth_v1;

option go_package = "github.com/agbgru/auth/pkg/auth_v1;auth_v1";

import "google/protobuf/timestamp.proto";

service Auth {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

enum Role {
  USER = 0;
  ADMIN = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string password_confirm = 4;
  Role role = 5;
}

message CreateUserResponse {
  int64 id = 1;
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  Role role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateUserRequest {
  int64 id = 1;
  string name = 2;
  string email = 3;
  Role role = 4;
}

message UpdateUserResponse {}

message DeleteUserRequest {
  int64 id = 1;
}

message DeleteUserResponse {}
